--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^5.0.0+2
+  fluttertoast: ^8.0.7
 
 dev_dependencies:
   flutter_test:
@@ -66,11 +67,9 @@ flutter:
         - asset: assets/fonts/SFProDisplay-Regular.ttf
         - asset: assets/fonts/SFProDisplay-RegularItalic.ttf
           style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+    - family: Iconfont
+      fonts:
+        - asset: assets/fonts/iconfont.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
